# aether

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/actions/setup/: action.yml
.github/workflows/: cd.yml  ci.yml
include/: aether.h  buffer.h  cobs.h  err.h  error.h  hashmap.h  leb128.h  router.h  serial.h  session.h  socket.h  tick.h  transport.h  types.h  version.h.in
src/: aether.c  buffer.c  cobs.c  err.c  hashmap.c  leb128.c  router.c  serial.c  session.c  socket.c  tick.c  transport.c
tests/: CMakeLists.txt  cobs_tests.cc  leb128_tests.cc
tests/src/: aether_tests.cc  buffer_tests.cc  cobs_tests.cc  err_tests.cc  hashmap_tests.cc  leb128_tests.cc  serial_tests.cc  tick_tests.cc  transport_tests.cc
tools/cppcheck/: cppcheck.cmake  suppressions.xml
tools/hooks/: pre-commit
tools/uncrustify/: uncrustify.cfg  uncrustify.cmake
